# shared-rust

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: ci.yml
docs/: design.md
docs/implementation-plan/: 00-overview.md  01-crate-setup.md  02-error-module.md  03-tracing-and-otel.md  04-extractors-module.md  05-models-module.md  06-db-module.md  07-testing-and-ci.md
src/: config.rs  error.rs  lib.rs  otel.rs  tracing.rs
src/db/: mod.rs  pool.rs
src/extractors/: mod.rs  org_id.rs
src/models/: common.rs  envelope.rs  execution.rs  mod.rs  scanner.rs
tests/: error_test.rs  extractors_test.rs  models_test.rs
