[package]
name = "doki-shared"
version = "0.1.0"
edition = "2021"
description = "Foundational shared crate for Doki Stack Rust microservices"
license = "Apache-2.0"
repository = "https://github.com/doki-stack/shared-rust"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["full"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Identifiers
uuid = { version = "1", features = ["v4", "serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# HTTP utilities
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }

# Optional: OpenTelemetry (behind feature)
opentelemetry = { version = "0.24", optional = true }
opentelemetry-otlp = { version = "0.17", optional = true }
opentelemetry_sdk = { version = "0.24", optional = true, features = ["rt-tokio"] }
tracing-opentelemetry = { version = "0.25", optional = true }

# Optional: PostgreSQL (behind feature)
sqlx = {
    version = "0.8",
    optional = true,
    features = ["runtime-tokio", "postgres", "uuid", "chrono"]
}

[features]
default = []
otel = [
    "opentelemetry",
    "opentelemetry-otlp",
    "opentelemetry_sdk",
    "tracing-opentelemetry"
]
sqlx-pg = ["sqlx"]

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
tokio-test = "0.4"
